# unretro

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  release.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml  sample-data.yml
benches/: traversal.rs
crates/unretro-python/: Cargo.toml  README.md  pyproject.toml
crates/unretro-python/python/unretro/: __init__.py  __init__.pyi
crates/unretro-python/src/: entry.rs  error.rs  format.rs  functions.rs  iterator.rs  lib.rs  loader.rs  metadata.rs
crates/unretro-python/tests/: test_unretro.py
docs/: ARCHITECTURE.md  USAGE.md
examples/: list_contents.rs
scripts/: update-expect.sh
src/: attributes.rs  compat.rs  error.rs  format.rs  lib.rs  loader.rs  metadata.rs  path_utils.rs  source.rs
src/cli/: mod.rs  tree.rs
src/formats/: mod.rs
src/formats/amiga/: lha.rs  mod.rs
src/formats/common/: directory.rs  gzip.rs  mod.rs  tar.rs  xz.rs  zip.rs
src/formats/dos/: fat.rs  gpt.rs  mbr.rs  mod.rs  rar.rs
src/formats/dos/rar_stream/: crc32.rs  error.rs  mod.rs
src/formats/dos/rar_stream/decompress/: bit_reader.rs  huffman.rs  lzss.rs  mod.rs  rar29.rs  vm.rs
src/formats/dos/rar_stream/decompress/ppm/: model.rs  sub_alloc.rs
src/formats/dos/rar_stream/decompress/rar5/: bit_decoder.rs  block_decoder.rs  decoder.rs  filter.rs  range_coder.rs
src/formats/dos/rar_stream/parsing/: archive_header.rs  file_header.rs  marker_header.rs  mod.rs
src/formats/dos/rar_stream/parsing/rar5/: archive_header.rs  file_header.rs  mod.rs  vint.rs
src/formats/game/: imuse_bundle.rs  mod.rs  pak.rs  scumm.rs  wad.rs  wolf3d.rs
src/formats/game/scumm/: mod.rs  speech.rs
src/formats/macintosh/: apple_double.rs  binhex.rs  compactpro.rs  encoding.rs  hfs.rs  macbinary.rs  mod.rs  resource_fork.rs  stuffit.rs
testdata/: test-ad.tar.xz  test-archive-mac.tar.xz
tests/: integration.rs  sample_data.rs  security.rs
