[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "unretro"
dynamic = ["version"]
description = "Python bindings for retro container formats (ZIP, LHA, HFS, StuffIt, etc.)"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Archiving",
    "Topic :: Games/Entertainment",
    "Typing :: Typed",
]
keywords = ["archive", "retro", "emulator", "hfs", "stuffit", "lha", "container", "zip"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-timeout>=2.0"]

[tool.maturin]
python-source = "python"
module-name = "unretro._unretro"
features = ["pyo3/extension-module"]
strip = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
timeout = 30
